# Reveration_Time

./: .python-version  LICENSE  LICENSE.txt  README.md  logging.yaml  pyproject.toml
LICENSE/: gpl-3.0.txt
docs/: conf.py  index.rst  src.dataWrangling.rst  src.eda.rst  src.etl.rst  src.rst  src.utils.rst  src.viz.rst
notebooks/: 1.0-jr-initial-data-exploration-corpus-rir.ipynb
references/: Corpus_Mean_DRRs_and_T60s.csv
src/: app.py
src/utils/: registro.py
