[tool.poetry]
name = "reveration-time"
version = "0.0.1"
description = "Description of the project"
authors = ["Juan <rodriguezjuan001@outlook.com>"]
readme = "README.md"
packages = [{include = "reveration_time"}]

[tool.poetry.dependencies]
python = "3.10.12"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.15.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
dask = "^2023.8.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
